force-app/main/default/objects/AI_Data_Extraction_Mapping__c/AI_Data_Extraction_Mapping__c.object-meta.xml
<CustomObject>
    <label>Data Context Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Context Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>