force-app/main/default/objects/AI_Data_Extraction_Mapping__c/fields/AI_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>AI_Data_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API Data Connection</label>
    <referenceTo>AI_Data_Source__c</referenceTo>
    <relationshipLabel>Data Context Mappings</relationshipLabel>
    <relationshipName>Data_Context_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>