force-app/main/default/objects/AI_Data_Extraction_Mapping__c/fields/Apex_Security_Layer__c.field-meta.xml
<CustomField>
    <fullName>Apex_Security_Layer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apex (Security Layer)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Security_Filters__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Apex</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Security_Filters__c</referenceTo>
    <relationshipLabel>Data Context Mappings</relationshipLabel>
    <relationshipName>Data_Context_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>