force-app/main/default/objects/AI_Data_Extraction_Mapping__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <formula>(&quot;AI_Data_Extraction_Mapping__c&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Name</label>
    <type>Text</type>
</CustomField>