force-app/main/default/objects/AI_Data_Extraction_Mapping__c/validationRules/Object_Cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_Cannot_be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Object_Name__c)</errorConditionFormula>
    <errorDisplayField>Object_Name__c</errorDisplayField>
    <errorMessage>You cannot change the object name once the mapping has been created, please create a new mapping instead.</errorMessage>
</ValidationRule>