force-app/main/default/objects/AI_Data_Extraction_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>AI_Data_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>